[gd_scene load_steps=7 format=4 uid="uid://354mlacbda87"]

[ext_resource type="Script" path="res://scripts/board/board.gd" id="1_7cs48"]
[ext_resource type="Texture2D" uid="uid://dd6ovaupuj8lc" path="res://placeholder/tileset/Yulpers & Ladders Board (Full).png" id="1_omr8n"]
[ext_resource type="Script" path="res://scripts/board/tile_map_layer.gd" id="2_4xkd4"]
[ext_resource type="PackedScene" uid="uid://74ouaamt64y0" path="res://scenes/player/player.tscn" id="4_jrxui"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_htu6k"]
texture = ExtResource("1_omr8n")
0:0/0 = 0
0:0/0/custom_data_0 = Vector2(-1, -1)
1:0/0 = 0
1:0/0/custom_data_0 = Vector2(-1, -1)
2:0/0 = 0
2:0/0/custom_data_0 = Vector2(-1, -1)
3:0/0 = 0
3:0/0/custom_data_0 = Vector2(-1, -1)
4:0/0 = 0
4:0/0/custom_data_0 = Vector2(1, 12)
5:0/0 = 0
5:0/0/custom_data_0 = Vector2(-1, -1)
6:0/0 = 0
6:0/0/custom_data_0 = Vector2(-1, -1)
7:0/0 = 0
7:0/0/custom_data_0 = Vector2(-1, -1)
8:0/0 = 0
8:0/0/custom_data_0 = Vector2(-1, -1)
9:0/0 = 0
9:0/0/custom_data_0 = Vector2(-1, -1)
10:0/0 = 0
10:0/0/custom_data_0 = Vector2(-1, -1)
11:0/0 = 0
11:0/0/custom_data_0 = Vector2(-1, -1)
12:0/0 = 0
12:0/0/custom_data_0 = Vector2(-1, -1)
13:0/0 = 0
13:0/0/custom_data_0 = Vector2(-1, -1)
14:0/0 = 0
14:0/0/custom_data_0 = Vector2(-1, -1)
15:0/0 = 0
15:0/0/custom_data_0 = Vector2(-1, -1)
0:1/0 = 0
0:1/0/custom_data_0 = Vector2(-1, -1)
1:1/0 = 0
1:1/0/custom_data_0 = Vector2(-1, -1)
2:1/0 = 0
2:1/0/custom_data_0 = Vector2(-1, -1)
3:1/0 = 0
3:1/0/custom_data_0 = Vector2(-1, -1)
4:1/0 = 0
4:1/0/custom_data_0 = Vector2(-1, -1)
5:1/0 = 0
5:1/0/custom_data_0 = Vector2(-1, -1)
6:1/0 = 0
6:1/0/custom_data_0 = Vector2(-1, -1)
7:1/0 = 0
7:1/0/custom_data_0 = Vector2(-1, -1)
8:1/0 = 0
8:1/0/custom_data_0 = Vector2(-1, -1)
9:1/0 = 0
9:1/0/custom_data_0 = Vector2(-1, -1)
10:1/0 = 0
10:1/0/custom_data_0 = Vector2(15, 13)
11:1/0 = 0
11:1/0/custom_data_0 = Vector2(-1, -1)
12:1/0 = 0
12:1/0/custom_data_0 = Vector2(-1, -1)
13:1/0 = 0
13:1/0/custom_data_0 = Vector2(-1, -1)
14:1/0 = 0
14:1/0/custom_data_0 = Vector2(-1, -1)
15:1/0 = 0
15:1/0/custom_data_0 = Vector2(-1, -1)
0:2/0 = 0
0:2/0/custom_data_0 = Vector2(-1, -1)
1:2/0 = 0
1:2/0/custom_data_0 = Vector2(-1, -1)
2:2/0 = 0
2:2/0/custom_data_0 = Vector2(-1, -1)
3:2/0 = 0
3:2/0/custom_data_0 = Vector2(-1, -1)
4:2/0 = 0
4:2/0/custom_data_0 = Vector2(-1, -1)
5:2/0 = 0
5:2/0/custom_data_0 = Vector2(-1, -1)
6:2/0 = 0
6:2/0/custom_data_0 = Vector2(-1, -1)
7:2/0 = 0
7:2/0/custom_data_0 = Vector2(-1, -1)
8:2/0 = 0
8:2/0/custom_data_0 = Vector2(-1, -1)
9:2/0 = 0
9:2/0/custom_data_0 = Vector2(-1, -1)
10:2/0 = 0
10:2/0/custom_data_0 = Vector2(-1, -1)
11:2/0 = 0
11:2/0/custom_data_0 = Vector2(-1, -1)
12:2/0 = 0
12:2/0/custom_data_0 = Vector2(-1, -1)
13:2/0 = 0
13:2/0/custom_data_0 = Vector2(-1, -1)
14:2/0 = 0
14:2/0/custom_data_0 = Vector2(-1, -1)
15:2/0 = 0
15:2/0/custom_data_0 = Vector2(-1, -1)
0:3/0 = 0
0:3/0/custom_data_0 = Vector2(-1, -1)
1:3/0 = 0
1:3/0/custom_data_0 = Vector2(-1, -1)
2:3/0 = 0
2:3/0/custom_data_0 = Vector2(-1, -1)
3:3/0 = 0
3:3/0/custom_data_0 = Vector2(-1, -1)
4:3/0 = 0
4:3/0/custom_data_0 = Vector2(-1, -1)
5:3/0 = 0
5:3/0/custom_data_0 = Vector2(-1, -1)
6:3/0 = 0
6:3/0/custom_data_0 = Vector2(-1, -1)
7:3/0 = 0
7:3/0/custom_data_0 = Vector2(-1, -1)
8:3/0 = 0
8:3/0/custom_data_0 = Vector2(-1, -1)
9:3/0 = 0
9:3/0/custom_data_0 = Vector2(-1, -1)
10:3/0 = 0
10:3/0/custom_data_0 = Vector2(-1, -1)
11:3/0 = 0
11:3/0/custom_data_0 = Vector2(-1, -1)
12:3/0 = 0
12:3/0/custom_data_0 = Vector2(-1, -1)
13:3/0 = 0
13:3/0/custom_data_0 = Vector2(-1, -1)
14:3/0 = 0
14:3/0/custom_data_0 = Vector2(-1, -1)
15:3/0 = 0
15:3/0/custom_data_0 = Vector2(-1, -1)
0:4/0 = 0
0:4/0/custom_data_0 = Vector2(-1, -1)
1:4/0 = 0
1:4/0/custom_data_0 = Vector2(-1, -1)
2:4/0 = 0
2:4/0/custom_data_0 = Vector2(-1, -1)
3:4/0 = 0
3:4/0/custom_data_0 = Vector2(-1, -1)
4:4/0 = 0
4:4/0/custom_data_0 = Vector2(-1, -1)
5:4/0 = 0
5:4/0/custom_data_0 = Vector2(-1, -1)
6:4/0 = 0
6:4/0/custom_data_0 = Vector2(-1, -1)
7:4/0 = 0
7:4/0/custom_data_0 = Vector2(-1, -1)
8:4/0 = 0
8:4/0/custom_data_0 = Vector2(-1, -1)
9:4/0 = 0
9:4/0/custom_data_0 = Vector2(-1, -1)
10:4/0 = 0
10:4/0/custom_data_0 = Vector2(-1, -1)
11:4/0 = 0
11:4/0/custom_data_0 = Vector2(-1, -1)
12:4/0 = 0
12:4/0/custom_data_0 = Vector2(-1, -1)
13:4/0 = 0
13:4/0/custom_data_0 = Vector2(-1, -1)
14:4/0 = 0
14:4/0/custom_data_0 = Vector2(-1, -1)
15:4/0 = 0
15:4/0/custom_data_0 = Vector2(-1, -1)
0:5/0 = 0
0:5/0/custom_data_0 = Vector2(-1, -1)
1:5/0 = 0
1:5/0/custom_data_0 = Vector2(-1, -1)
2:5/0 = 0
2:5/0/custom_data_0 = Vector2(-1, -1)
3:5/0 = 0
3:5/0/custom_data_0 = Vector2(-1, -1)
4:5/0 = 0
4:5/0/custom_data_0 = Vector2(-1, -1)
5:5/0 = 0
5:5/0/custom_data_0 = Vector2(-1, -1)
6:5/0 = 0
6:5/0/custom_data_0 = Vector2(-1, -1)
7:5/0 = 0
7:5/0/custom_data_0 = Vector2(-1, -1)
8:5/0 = 0
8:5/0/custom_data_0 = Vector2(-1, -1)
9:5/0 = 0
9:5/0/custom_data_0 = Vector2(-1, -1)
10:5/0 = 0
10:5/0/custom_data_0 = Vector2(10, 13)
11:5/0 = 0
11:5/0/custom_data_0 = Vector2(-1, -1)
12:5/0 = 0
12:5/0/custom_data_0 = Vector2(-1, -1)
13:5/0 = 0
13:5/0/custom_data_0 = Vector2(-1, -1)
14:5/0 = 0
14:5/0/custom_data_0 = Vector2(9, 9)
15:5/0 = 0
15:5/0/custom_data_0 = Vector2(-1, -1)
0:6/0 = 0
0:6/0/custom_data_0 = Vector2(-1, -1)
1:6/0 = 0
1:6/0/custom_data_0 = Vector2(-1, -1)
2:6/0 = 0
2:6/0/custom_data_0 = Vector2(-1, -1)
3:6/0 = 0
3:6/0/custom_data_0 = Vector2(-1, -1)
4:6/0 = 0
4:6/0/custom_data_0 = Vector2(-1, -1)
5:6/0 = 0
5:6/0/custom_data_0 = Vector2(-1, -1)
6:6/0 = 0
6:6/0/custom_data_0 = Vector2(-1, -1)
7:6/0 = 0
7:6/0/custom_data_0 = Vector2(-1, -1)
8:6/0 = 0
8:6/0/custom_data_0 = Vector2(-1, -1)
9:6/0 = 0
9:6/0/custom_data_0 = Vector2(-1, -1)
10:6/0 = 0
10:6/0/custom_data_0 = Vector2(-1, -1)
11:6/0 = 0
11:6/0/custom_data_0 = Vector2(-1, -1)
12:6/0 = 0
12:6/0/custom_data_0 = Vector2(-1, -1)
13:6/0 = 0
13:6/0/custom_data_0 = Vector2(-1, -1)
14:6/0 = 0
14:6/0/custom_data_0 = Vector2(-1, -1)
15:6/0 = 0
15:6/0/custom_data_0 = Vector2(-1, -1)
0:7/0 = 0
0:7/0/custom_data_0 = Vector2(-1, -1)
1:7/0 = 0
1:7/0/custom_data_0 = Vector2(-1, -1)
2:7/0 = 0
2:7/0/custom_data_0 = Vector2(-1, -1)
3:7/0 = 0
3:7/0/custom_data_0 = Vector2(-1, -1)
4:7/0 = 0
4:7/0/custom_data_0 = Vector2(-1, -1)
5:7/0 = 0
5:7/0/custom_data_0 = Vector2(-1, -1)
6:7/0 = 0
6:7/0/custom_data_0 = Vector2(-1, -1)
7:7/0 = 0
7:7/0/custom_data_0 = Vector2(-1, -1)
8:7/0 = 0
8:7/0/custom_data_0 = Vector2(-1, -1)
9:7/0 = 0
9:7/0/custom_data_0 = Vector2(-1, -1)
10:7/0 = 0
10:7/0/custom_data_0 = Vector2(-1, -1)
11:7/0 = 0
11:7/0/custom_data_0 = Vector2(-1, -1)
12:7/0 = 0
12:7/0/custom_data_0 = Vector2(-1, -1)
13:7/0 = 0
13:7/0/custom_data_0 = Vector2(-1, -1)
14:7/0 = 0
14:7/0/custom_data_0 = Vector2(-1, -1)
15:7/0 = 0
15:7/0/custom_data_0 = Vector2(-1, -1)
0:8/0 = 0
0:8/0/custom_data_0 = Vector2(-1, -1)
1:8/0 = 0
1:8/0/custom_data_0 = Vector2(-1, -1)
2:8/0 = 0
2:8/0/custom_data_0 = Vector2(-1, -1)
3:8/0 = 0
3:8/0/custom_data_0 = Vector2(-1, -1)
4:8/0 = 0
4:8/0/custom_data_0 = Vector2(-1, -1)
5:8/0 = 0
5:8/0/custom_data_0 = Vector2(-1, -1)
6:8/0 = 0
6:8/0/custom_data_0 = Vector2(5, 15)
7:8/0 = 0
7:8/0/custom_data_0 = Vector2(-1, -1)
8:8/0 = 0
8:8/0/custom_data_0 = Vector2(-1, -1)
9:8/0 = 0
9:8/0/custom_data_0 = Vector2(-1, -1)
10:8/0 = 0
10:8/0/custom_data_0 = Vector2(-1, -1)
11:8/0 = 0
11:8/0/custom_data_0 = Vector2(-1, -1)
12:8/0 = 0
12:8/0/custom_data_0 = Vector2(-1, -1)
13:8/0 = 0
13:8/0/custom_data_0 = Vector2(-1, -1)
14:8/0 = 0
14:8/0/custom_data_0 = Vector2(15, 10)
15:8/0 = 0
15:8/0/custom_data_0 = Vector2(-1, -1)
0:9/0 = 0
0:9/0/custom_data_0 = Vector2(-1, -1)
1:9/0 = 0
1:9/0/custom_data_0 = Vector2(1, 1)
2:9/0 = 0
2:9/0/custom_data_0 = Vector2(-1, -1)
3:9/0 = 0
3:9/0/custom_data_0 = Vector2(-1, -1)
4:9/0 = 0
4:9/0/custom_data_0 = Vector2(-1, -1)
5:9/0 = 0
5:9/0/custom_data_0 = Vector2(-1, -1)
6:9/0 = 0
6:9/0/custom_data_0 = Vector2(-1, -1)
7:9/0 = 0
7:9/0/custom_data_0 = Vector2(-1, -1)
8:9/0 = 0
8:9/0/custom_data_0 = Vector2(-1, -1)
9:9/0 = 0
9:9/0/custom_data_0 = Vector2(-1, -1)
10:9/0 = 0
10:9/0/custom_data_0 = Vector2(8, 4)
11:9/0 = 0
11:9/0/custom_data_0 = Vector2(-1, -1)
12:9/0 = 0
12:9/0/custom_data_0 = Vector2(-1, -1)
13:9/0 = 0
13:9/0/custom_data_0 = Vector2(-1, -1)
14:9/0 = 0
14:9/0/custom_data_0 = Vector2(-1, -1)
15:9/0 = 0
15:9/0/custom_data_0 = Vector2(-1, -1)
0:10/0 = 0
0:10/0/custom_data_0 = Vector2(-1, -1)
1:10/0 = 0
1:10/0/custom_data_0 = Vector2(-1, -1)
2:10/0 = 0
2:10/0/custom_data_0 = Vector2(3, 8)
3:10/0 = 0
3:10/0/custom_data_0 = Vector2(-1, -1)
4:10/0 = 0
4:10/0/custom_data_0 = Vector2(-1, -1)
5:10/0 = 0
5:10/0/custom_data_0 = Vector2(-1, -1)
6:10/0 = 0
6:10/0/custom_data_0 = Vector2(-1, -1)
7:10/0 = 0
7:10/0/custom_data_0 = Vector2(-1, -1)
8:10/0 = 0
8:10/0/custom_data_0 = Vector2(-1, -1)
9:10/0 = 0
9:10/0/custom_data_0 = Vector2(-1, -1)
10:10/0 = 0
10:10/0/custom_data_0 = Vector2(-1, -1)
11:10/0 = 0
11:10/0/custom_data_0 = Vector2(-1, -1)
12:10/0 = 0
12:10/0/custom_data_0 = Vector2(-1, -1)
13:10/0 = 0
13:10/0/custom_data_0 = Vector2(-1, -1)
14:10/0 = 0
14:10/0/custom_data_0 = Vector2(-1, -1)
15:10/0 = 0
15:10/0/custom_data_0 = Vector2(12, 2)
0:11/0 = 0
0:11/0/custom_data_0 = Vector2(-1, -1)
1:11/0 = 0
1:11/0/custom_data_0 = Vector2(-1, -1)
2:11/0 = 0
2:11/0/custom_data_0 = Vector2(-1, -1)
3:11/0 = 0
3:11/0/custom_data_0 = Vector2(-1, -1)
4:11/0 = 0
4:11/0/custom_data_0 = Vector2(-1, -1)
5:11/0 = 0
5:11/0/custom_data_0 = Vector2(-1, -1)
6:11/0 = 0
6:11/0/custom_data_0 = Vector2(-1, -1)
7:11/0 = 0
7:11/0/custom_data_0 = Vector2(-1, -1)
8:11/0 = 0
8:11/0/custom_data_0 = Vector2(-1, -1)
9:11/0 = 0
9:11/0/custom_data_0 = Vector2(-1, -1)
10:11/0 = 0
10:11/0/custom_data_0 = Vector2(-1, -1)
11:11/0 = 0
11:11/0/custom_data_0 = Vector2(-1, -1)
12:11/0 = 0
12:11/0/custom_data_0 = Vector2(-1, -1)
13:11/0 = 0
13:11/0/custom_data_0 = Vector2(-1, -1)
14:11/0 = 0
14:11/0/custom_data_0 = Vector2(-1, -1)
15:11/0 = 0
15:11/0/custom_data_0 = Vector2(-1, -1)
0:12/0 = 0
0:12/0/custom_data_0 = Vector2(-1, -1)
1:12/0 = 0
1:12/0/custom_data_0 = Vector2(-1, -1)
2:12/0 = 0
2:12/0/custom_data_0 = Vector2(-1, -1)
3:12/0 = 0
3:12/0/custom_data_0 = Vector2(-1, -1)
4:12/0 = 0
4:12/0/custom_data_0 = Vector2(-1, -1)
5:12/0 = 0
5:12/0/custom_data_0 = Vector2(-1, -1)
6:12/0 = 0
6:12/0/custom_data_0 = Vector2(-1, -1)
7:12/0 = 0
7:12/0/custom_data_0 = Vector2(-1, -1)
8:12/0 = 0
8:12/0/custom_data_0 = Vector2(-1, -1)
9:12/0 = 0
9:12/0/custom_data_0 = Vector2(-1, -1)
10:12/0 = 0
10:12/0/custom_data_0 = Vector2(-1, -1)
11:12/0 = 0
11:12/0/custom_data_0 = Vector2(10, 6)
12:12/0 = 0
12:12/0/custom_data_0 = Vector2(-1, -1)
13:12/0 = 0
13:12/0/custom_data_0 = Vector2(-1, -1)
14:12/0 = 0
14:12/0/custom_data_0 = Vector2(-1, -1)
15:12/0 = 0
15:12/0/custom_data_0 = Vector2(-1, -1)
0:13/0 = 0
0:13/0/custom_data_0 = Vector2(-1, -1)
1:13/0 = 0
1:13/0/custom_data_0 = Vector2(-1, -1)
2:13/0 = 0
2:13/0/custom_data_0 = Vector2(-1, -1)
3:13/0 = 0
3:13/0/custom_data_0 = Vector2(-1, -1)
4:13/0 = 0
4:13/0/custom_data_0 = Vector2(-1, -1)
5:13/0 = 0
5:13/0/custom_data_0 = Vector2(-1, -1)
6:13/0 = 0
6:13/0/custom_data_0 = Vector2(-1, -1)
7:13/0 = 0
7:13/0/custom_data_0 = Vector2(-1, -1)
8:13/0 = 0
8:13/0/custom_data_0 = Vector2(-1, -1)
9:13/0 = 0
9:13/0/custom_data_0 = Vector2(-1, -1)
10:13/0 = 0
10:13/0/custom_data_0 = Vector2(-1, -1)
11:13/0 = 0
11:13/0/custom_data_0 = Vector2(-1, -1)
12:13/0 = 0
12:13/0/custom_data_0 = Vector2(-1, -1)
13:13/0 = 0
13:13/0/custom_data_0 = Vector2(-1, -1)
14:13/0 = 0
14:13/0/custom_data_0 = Vector2(-1, -1)
15:13/0 = 0
15:13/0/custom_data_0 = Vector2(-1, -1)
0:14/0 = 0
0:14/0/custom_data_0 = Vector2(-1, -1)
1:14/0 = 0
1:14/0/custom_data_0 = Vector2(-1, -1)
2:14/0 = 0
2:14/0/custom_data_0 = Vector2(-1, -1)
3:14/0 = 0
3:14/0/custom_data_0 = Vector2(-1, -1)
4:14/0 = 0
4:14/0/custom_data_0 = Vector2(-1, -1)
5:14/0 = 0
5:14/0/custom_data_0 = Vector2(-1, -1)
6:14/0 = 0
6:14/0/custom_data_0 = Vector2(-1, -1)
7:14/0 = 0
7:14/0/custom_data_0 = Vector2(-1, -1)
8:14/0 = 0
8:14/0/custom_data_0 = Vector2(-1, -1)
9:14/0 = 0
9:14/0/custom_data_0 = Vector2(-1, -1)
10:14/0 = 0
10:14/0/custom_data_0 = Vector2(-1, -1)
11:14/0 = 0
11:14/0/custom_data_0 = Vector2(-1, -1)
12:14/0 = 0
12:14/0/custom_data_0 = Vector2(-1, -1)
13:14/0 = 0
13:14/0/custom_data_0 = Vector2(-1, -1)
14:14/0 = 0
14:14/0/custom_data_0 = Vector2(-1, -1)
15:14/0 = 0
15:14/0/custom_data_0 = Vector2(-1, -1)
0:15/0 = 0
0:15/0/custom_data_0 = Vector2(-1, -1)
1:15/0 = 0
1:15/0/custom_data_0 = Vector2(-1, -1)
2:15/0 = 0
2:15/0/custom_data_0 = Vector2(-1, -1)
3:15/0 = 0
3:15/0/custom_data_0 = Vector2(-1, -1)
4:15/0 = 0
4:15/0/custom_data_0 = Vector2(-1, -1)
5:15/0 = 0
5:15/0/custom_data_0 = Vector2(-1, -1)
6:15/0 = 0
6:15/0/custom_data_0 = Vector2(6, 1)
7:15/0 = 0
7:15/0/custom_data_0 = Vector2(-1, -1)
8:15/0 = 0
8:15/0/custom_data_0 = Vector2(-1, -1)
9:15/0 = 0
9:15/0/custom_data_0 = Vector2(-1, -1)
10:15/0 = 0
10:15/0/custom_data_0 = Vector2(-1, -1)
11:15/0 = 0
11:15/0/custom_data_0 = Vector2(-1, -1)
12:15/0 = 0
12:15/0/custom_data_0 = Vector2(-1, -1)
13:15/0 = 0
13:15/0/custom_data_0 = Vector2(-1, -1)
14:15/0 = 0
14:15/0/custom_data_0 = Vector2(-1, -1)
15:15/0 = 0
15:15/0/custom_data_0 = Vector2(-1, -1)

[sub_resource type="TileSet" id="TileSet_s3kqw"]
tile_size = Vector2i(20, 20)
custom_data_layer_0/name = "target"
custom_data_layer_0/type = 5
sources/0 = SubResource("TileSetAtlasSource_htu6k")

[node name="Board" type="Node2D"]
script = ExtResource("1_7cs48")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAUAAkAAAAAAAAAAAAUAAoAAAAAAAEAAAAUAAsAAAAAAAIAAAAUAAwAAAAAAAMAAAAUAA0AAAAAAAQAAAAUAA4AAAAAAAUAAAAUAA8AAAAAAAYAAAAUABAAAAAAAAcAAAAUABEAAAAAAAgAAAAUABIAAAAAAAkAAAAUABMAAAAAAAoAAAAUABQAAAAAAAsAAAAUABUAAAAAAAwAAAAUABYAAAAAAA0AAAAUABcAAAAAAA4AAAAUABgAAAAAAA8AAAAVAAkAAAABAAAAAAAVAAoAAAABAAEAAAAVAAsAAAABAAIAAAAVAAwAAAABAAMAAAAVAA0AAAABAAQAAAAVAA4AAAABAAUAAAAVAA8AAAABAAYAAAAVABAAAAABAAcAAAAVABEAAAABAAgAAAAVABMAAAABAAoAAAAVABQAAAABAAsAAAAVABUAAAABAAwAAAAVABgAAAABAA8AAAAWAAkAAAACAAAAAAAWAAoAAAACAAEAAAAWAAsAAAACAAIAAAAWAAwAAAACAAMAAAAWAA0AAAACAAQAAAAWAA4AAAACAAUAAAAWAA8AAAACAAYAAAAWABAAAAACAAcAAAAWABEAAAACAAgAAAAWABIAAAACAAkAAAAWABMAAAACAAoAAAAWABQAAAACAAsAAAAWABUAAAACAAwAAAAWABYAAAACAA0AAAAWABcAAAACAA4AAAAXAAkAAAADAAAAAAAXAAoAAAADAAEAAAAXAAsAAAADAAIAAAAXAAwAAAADAAMAAAAXAA0AAAADAAQAAAAXAA4AAAADAAUAAAAXAA8AAAADAAYAAAAXABAAAAADAAcAAAAXABEAAAADAAgAAAAXABIAAAADAAkAAAAXABMAAAADAAoAAAAXABQAAAADAAsAAAAXABUAAAADAAwAAAAXABYAAAADAA0AAAAXABcAAAADAA4AAAAXABgAAAADAA8AAAAYAAkAAAAEAAAAAAAYAAoAAAAEAAEAAAAYAAsAAAAEAAIAAAAYAAwAAAAEAAMAAAAYAA0AAAAEAAQAAAAYAA4AAAAEAAUAAAAYAA8AAAAEAAYAAAAYABAAAAAEAAcAAAAYABEAAAAEAAgAAAAYABIAAAAEAAkAAAAYABMAAAAEAAoAAAAYABQAAAAEAAsAAAAYABUAAAAEAAwAAAAYABYAAAAEAA0AAAAYABgAAAAEAA8AAAAZAAkAAAAFAAAAAAAZAAoAAAAFAAEAAAAZAAsAAAAFAAIAAAAZAAwAAAAFAAMAAAAZAA0AAAAFAAQAAAAZAA4AAAAFAAUAAAAZAA8AAAAFAAYAAAAZABAAAAAFAAcAAAAZABEAAAAFAAgAAAAZABIAAAAFAAkAAAAZABMAAAAFAAoAAAAZABQAAAAFAAsAAAAZABUAAAAFAAwAAAAZABYAAAAFAA0AAAAZABcAAAAFAA4AAAAZABgAAAAFAA8AAAAaAAkAAAAGAAAAAAAaAAoAAAAGAAEAAAAaAAsAAAAGAAIAAAAaAAwAAAAGAAMAAAAaAA0AAAAGAAQAAAAaAA4AAAAGAAUAAAAaAA8AAAAGAAYAAAAaABAAAAAGAAcAAAAaABEAAAAGAAgAAAAaABIAAAAGAAkAAAAaABMAAAAGAAoAAAAaABQAAAAGAAsAAAAaABUAAAAGAAwAAAAaABYAAAAGAA0AAAAaABcAAAAGAA4AAAAaABgAAAAGAA8AAAAbAAkAAAAHAAAAAAAbAAoAAAAHAAEAAAAbAAsAAAAHAAIAAAAbAAwAAAAHAAMAAAAbAA0AAAAHAAQAAAAbAA4AAAAHAAUAAAAbAA8AAAAHAAYAAAAbABAAAAAHAAcAAAAbABEAAAAHAAgAAAAbABIAAAAHAAkAAAAbABMAAAAHAAoAAAAbABQAAAAHAAsAAAAbABUAAAAHAAwAAAAbABYAAAAHAA0AAAAbABcAAAAHAA4AAAAbABgAAAAHAA8AAAAcAAkAAAAIAAAAAAAcAAoAAAAIAAEAAAAcAAsAAAAIAAIAAAAcAAwAAAAIAAMAAAAcAA0AAAAIAAQAAAAcAA4AAAAIAAUAAAAcAA8AAAAIAAYAAAAcABAAAAAIAAcAAAAcABEAAAAIAAgAAAAcABIAAAAIAAkAAAAcABMAAAAIAAoAAAAcABQAAAAIAAsAAAAcABUAAAAIAAwAAAAcABYAAAAIAA0AAAAcABcAAAAIAA4AAAAcABgAAAAIAA8AAAAdAAkAAAAJAAAAAAAdAAoAAAAJAAEAAAAdAAsAAAAJAAIAAAAdAAwAAAAJAAMAAAAdAA0AAAAJAAQAAAAdAA4AAAAJAAUAAAAdAA8AAAAJAAYAAAAdABAAAAAJAAcAAAAdABEAAAAJAAgAAAAdABIAAAAJAAkAAAAdABMAAAAJAAoAAAAdABQAAAAJAAsAAAAdABUAAAAJAAwAAAAdABYAAAAJAA0AAAAdABcAAAAJAA4AAAAdABgAAAAJAA8AAAAeAAkAAAAKAAAAAAAeAAoAAAAKAAEAAAAeAAsAAAAKAAIAAAAeAAwAAAAKAAMAAAAeAA0AAAAKAAQAAAAeAA4AAAAKAAUAAAAeAA8AAAAKAAYAAAAeABAAAAAKAAcAAAAeABEAAAAKAAgAAAAeABIAAAAKAAkAAAAeABMAAAAKAAoAAAAeABQAAAAKAAsAAAAeABUAAAAKAAwAAAAeABYAAAAKAA0AAAAeABcAAAAKAA4AAAAeABgAAAAKAA8AAAAfAAkAAAALAAAAAAAfAAoAAAALAAEAAAAfAAsAAAALAAIAAAAfAAwAAAALAAMAAAAfAA0AAAALAAQAAAAfAA4AAAALAAUAAAAfAA8AAAALAAYAAAAfABAAAAALAAcAAAAfABEAAAALAAgAAAAfABIAAAALAAkAAAAfABMAAAALAAoAAAAfABQAAAALAAsAAAAfABUAAAALAAwAAAAfABYAAAALAA0AAAAfABcAAAALAA4AAAAfABgAAAALAA8AAAAgAAkAAAAMAAAAAAAgAAoAAAAMAAEAAAAgAAsAAAAMAAIAAAAgAAwAAAAMAAMAAAAgAA0AAAAMAAQAAAAgAA4AAAAMAAUAAAAgAA8AAAAMAAYAAAAgABAAAAAMAAcAAAAgABEAAAAMAAgAAAAgABIAAAAMAAkAAAAgABMAAAAMAAoAAAAgABQAAAAMAAsAAAAgABUAAAAMAAwAAAAgABYAAAAMAA0AAAAgABcAAAAMAA4AAAAgABgAAAAMAA8AAAAhAAkAAAANAAAAAAAhAAoAAAANAAEAAAAhAAsAAAANAAIAAAAhAAwAAAANAAMAAAAhAA0AAAANAAQAAAAhAA4AAAANAAUAAAAhAA8AAAANAAYAAAAhABAAAAANAAcAAAAhABEAAAANAAgAAAAhABIAAAANAAkAAAAhABMAAAANAAoAAAAhABQAAAANAAsAAAAhABUAAAANAAwAAAAhABYAAAANAA0AAAAhABcAAAANAA4AAAAhABgAAAANAA8AAAAiAAkAAAAOAAAAAAAiAAoAAAAOAAEAAAAiAAsAAAAOAAIAAAAiAAwAAAAOAAMAAAAiAA0AAAAOAAQAAAAiAA4AAAAOAAUAAAAiAA8AAAAOAAYAAAAiABAAAAAOAAcAAAAiABEAAAAOAAgAAAAiABIAAAAOAAkAAAAiABMAAAAOAAoAAAAiABQAAAAOAAsAAAAiABUAAAAOAAwAAAAiABYAAAAOAA0AAAAiABcAAAAOAA4AAAAiABgAAAAOAA8AAAAjAAkAAAAPAAAAAAAjAAoAAAAPAAEAAAAjAAsAAAAPAAIAAAAjAAwAAAAPAAMAAAAjAA0AAAAPAAQAAAAjAA4AAAAPAAUAAAAjAA8AAAAPAAYAAAAjABAAAAAPAAcAAAAjABEAAAAPAAgAAAAjABIAAAAPAAkAAAAjABMAAAAPAAoAAAAjABQAAAAPAAsAAAAjABUAAAAPAAwAAAAjABYAAAAPAA0AAAAjABcAAAAPAA4AAAAjABgAAAAPAA8AAAAVABcAAAABAA4AAAAVABIAAAABAAkAAAAWABgAAAACAA8AAAAYABcAAAAEAA4AAAAVABYAAAABAA0AAAA=")
tile_set = SubResource("TileSet_s3kqw")
script = ExtResource("2_4xkd4")

[node name="Player" parent="." instance=ExtResource("4_jrxui")]
position = Vector2(405, 497)
scale = Vector2(0.711217, 0.711217)

[node name="UI" type="CanvasLayer" parent="."]

[node name="DiceResult" type="Label" parent="UI"]
offset_left = 534.0
offset_top = 143.0
offset_right = 574.0
offset_bottom = 166.0
text = "w"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TurnLabel" type="Label" parent="UI"]
offset_left = 534.0
offset_top = 95.0
offset_right = 574.0
offset_bottom = 118.0
text = "Turn: "

[node name="RollButton" type="Button" parent="UI"]
offset_left = 526.0
offset_top = 536.0
offset_right = 534.0
offset_bottom = 544.0
text = "Roll"

[editable path="Player"]
